--- a/WPTrial/Pararaton - Windows Phone/Pararaton - Windows Phone/Pararaton - Windows Phone.csproj
+++ b/WPTrial/Pararaton - Windows Phone/Pararaton - Windows Phone/Pararaton - Windows Phone.csproj
@@ -62,7 +62,9 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Classes\CookieAwareWebClient.cs" />
     <Compile Include="Classes\HttpHandler.cs" />
+    <Compile Include="Classes\HttpHandler_2.cs" />
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
